--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "babel-eslint": "7.1.1",
     "babel-jest": "17.0.2",
     "babel-loader": "6.2.7",
+    "babel-plugin-transform-decorators": "^6.24.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-react-app": "^2.0.1",
     "case-sensitive-paths-webpack-plugin": "1.1.4",
     "chalk": "1.1.3",
@@ -50,14 +52,12 @@
     "whatwg-fetch": "1.0.0"
   },
   "dependencies": {
+    "mobx": "^3.1.9",
+    "mobx-react": "^4.1.7",
     "ramda": "^0.22.1",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
-    "react-redux": "^5.0.1",
-    "recompose": "^0.22.0",
-    "redux": "^3.6.0",
-    "redux-act": "^1.1.0",
-    "redux-thunk": "^2.1.0"
+    "recompose": "^0.22.0"
   },
   "scripts": {
     "start": "node scripts/start.js",
@@ -92,20 +92,15 @@
   "babel": {
     "presets": [
       "react-app"
+    ],
+    "plugins": [
+      "transform-decorators-legacy"
     ]
   },
   "eslintConfig": {
     "extends": [
       "react-app",
       "airbnb"
-    ],
-    "plugins": [
-      "immutable"
-    ],
-    "rules": {
-      "immutable/no-let": 2,
-      "immutable/no-this": 2,
-      "immutable/no-mutation": 2
-    }
+    ]
   }
 }
